[package]
name = "qdb-blaster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
config = "0.15.13"
humantime = "2.2.0"
humantime-serde = "1.1.1"
postgres = "0.19.10"
questdb-rs = { version = "5.0.0", features = ["chrono"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
